// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionsInfoComponent initial rendering should show list of versions 1`] = `
<div
  id="root0"
>

  <div
    class="mat-typography"
  >
    <div
      class="versions-list qa-version-list"
    >



      <em-latest-version
        class="qa-version-testId selected"
      />





      <em-version
        class="qa-version-testVariantId"
        matripple=""
      />

    </div>
  </div>
</div>
`;

exports[`VersionsInfoComponent selecting a version should indicate the selected version 1`] = `
<div
  class="versions-list qa-version-list"
>



  <em-latest-version
    class="qa-version-testId"
  />





  <em-version
    class="qa-version-testVariantId selected"
    matripple=""
  />

</div>
`;
